--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,54 @@
 .nav-container {
-  height: 18vh;
-  background-color: darkblue;
-  opacity: 0.2;
+  height: 20vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo-container {
+  width: 200px;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-container .center {
+  background-color: #979797;
+  height: 1px;
+  opacity: 0.25;
+  width: 40vw;
+}
+
+.menu-container {
+  background-color: rgb(255, 255, 255, 0.05);
+  backdrop-filter: blur(80px);
+  display: flex;
+  justify-content: space-evenly;
+  width: 50vw;
+  height: 96px;
+}
+
+.menu-container div {
+  display: flex;
+  align-items: center;
+  border: 3px solid transparent;
+  cursor: pointer;
+}
+
+.menu-container div.selected,
+.menu-container div.selected:hover {
+  border-bottom-color: white;
+}
+.menu-container div:hover {
+  border-bottom-color: rgb(255, 255, 255, 0.4);
+}
+
+.menu-container p {
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 19.2%;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  line-height: 96px;
 }
