--- a/src/pages/Destination/Destination.css
+++ b/src/pages/Destination/Destination.css
@@ -16,3 +16,115 @@
   width: 100vw;
   height: 100vh;
 }
+
+.destination-body {
+  display: flex;
+  flex-direction: column;
+  padding: 0vh 10vw;
+  box-sizing: border-box;
+}
+
+.destination-body .destination-container {
+  height: 66vh;
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  padding-bottom: 5vw;
+  box-sizing: border-box;
+}
+
+.destination-container .planet-container,
+.destination-container .info-container {
+  height: 100%;
+  width: 50%;
+}
+
+.destination-container .planet-container {
+  position: relative;
+}
+
+.destination-container .planet-container img {
+  height: 55vh;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  transition: opacity 500ms ease-in-out;
+}
+
+.destination-container .planet-container .planet-selected {
+  opacity: 1;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.planet-selector {
+  display: flex;
+  gap: 32px;
+}
+
+.planet-selector > div {
+  padding: 4px 8px;
+  color: white;
+  display: flex;
+  align-items: center;
+  border: 3px solid transparent;
+  cursor: pointer;
+}
+.planet-selector > div.selected,
+.planet-selector > div.selected:hover {
+  border-bottom-color: white;
+}
+
+.planet-selector > div:hover {
+  border-bottom-color: rgb(255, 255, 255, 0.4);
+}
+
+.planet-selector p {
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 19.2%;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  line-height: 32px;
+}
+
+.break {
+  background-color: #979797;
+  height: 1px;
+  opacity: 0.25;
+  width: 100%;
+}
+
+.data {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+
+.data .distance,
+.data .time {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.data .title p {
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  line-height: 100%;
+  color: #d0d6f9;
+}
