--- a/src/pages/Crew/Crew.css
+++ b/src/pages/Crew/Crew.css
@@ -9,7 +9,7 @@
 .crew .background {
   position: absolute;
   z-index: -1;
-  background-image: url("../../assets/background-crew-desktop.jpg");
+  background-image: url("../../assets/backgrounds/background-crew-desktop.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -49,6 +49,8 @@
   display: block;
   margin: auto;
   height: 55vh;
+  max-width: 100%;
+  object-fit: cover;
   -webkit-mask-image: linear-gradient(
     to bottom,
     rgb(0, 0, 0) 60%,
@@ -71,8 +73,21 @@
   height: 15px;
   background-color: #979797;
   border-radius: 99px;
+  cursor: pointer;
 }
 
 .crew-nav .bubble.selected {
   background-color: white;
+}
+
+@media (max-width: 992px) {
+  .crew .background {
+    background-image: url("../../assets/backgrounds/background-crew-tablet.jpg");
+  }
+}
+
+@media (max-width: 768px) {
+  .crew .background {
+    background-image: url("../../assets/backgrounds/background-crew-mobile.jpg");
+  }
 }
