--- a/src/pages/Destination/Destination.css
+++ b/src/pages/Destination/Destination.css
@@ -9,7 +9,7 @@
 .destination .background {
   position: absolute;
   z-index: -1;
-  background-image: url("../../assets/background-destination-desktop.jpg");
+  background-image: url("../../assets/backgrounds/background-destination-desktop.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -41,10 +41,14 @@
 
 .destination-container .planet-container {
   position: relative;
+  /* background-color: salmon; */
+  display: flex;
+  align-items: center;
 }
 
 .destination-container .planet-container img {
-  height: 55vh;
+  max-height: 55vh;
+  max-width: 100%;
   opacity: 0;
   position: absolute;
   left: 0;
@@ -127,4 +131,16 @@
   text-transform: uppercase;
   line-height: 100%;
   color: #d0d6f9;
+}
+
+@media (max-width: 992px) {
+  .destination .background {
+    background-image: url("../../assets/backgrounds/background-destination-tablet.jpg");
+  }
+}
+
+@media (max-width: 768px) {
+  .destination .background {
+    background-image: url("../../assets/backgrounds/background-destination-mobile.jpg");
+  }
 }
