--- a/src/index.css
+++ b/src/index.css
@@ -200,3 +200,54 @@ p {
   font-size: 18px;
   line-height: 180%;
 }
+
+@media (max-width: 992px) {
+  h2 {
+    font-size: 80px;
+  }
+
+  h3 {
+    font-size: 40px;
+  }
+
+  h4 {
+    font-size: 24px;
+  }
+
+  h5 {
+    font-size: 20px;
+    letter-spacing: 15%;
+  }
+
+  p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 80px;
+  }
+
+  h2 {
+    font-size: 56px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  h4 {
+    font-size: 18px;
+  }
+
+  h6 {
+    font-family: "Barlow Condensed", sans-serif;
+    font-size: 16px;
+    letter-spacing: 15%;
+  }
+
+  p {
+    font-size: 15px;
+  }
+}
